agregado nuevas secciones

--- a/index.html
+++ b/index.html
@@ -27,21 +27,19 @@
       <div class="bottom_links">
         <div class="ubicanos">
           <a href="#mapa">
-            <img src="img/icon/map.svg" alt="">
-            <span>Encuentranos</span>
+            <img src="img/icon/map.svg" alt="Encuentranos">
           </a>
         </div>
         <div class="contacto">
           <a href="#contacto">
-            <img src="img/icon/contact.svg" alt="">
-            <span>contacto</span>
+            <img src="img/icon/contact.svg" alt="Contacto">
           </a>
         </div>
       </div>
 
 
       <section id="inicio">
-        <div class="slider">
+        <div class="slider separator_bottom gradiant">
           <div class="flex_center">
             <div class="flex_item">
               <div class="text_center_slider ">
@@ -51,7 +49,7 @@
                     No te preocupes, Quedarte sin baterías es cosa del pasado
                   </h1>
                   <div class="cont_btn">
-                    <a href="#" class="btn btn_line">Hacete socio</a>
+                    <a href="#" class="btn">Hacete socio</a>
                   </div>
                 </div>
                 <div class="img">
@@ -61,16 +59,110 @@
             </div>
           </div>
           <img src="img/slider/slide_1.jpg" alt="" class="img-responsive img_slider">
-          <a href="#" class="arrow_down"></a>
+          <a href="#" class="arrow_down">
+            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="465.7" height="88.2" viewBox="187.6 170.3 465.7 88.2" enable-background="new 187.638 170.269 465.706 88.202" xml:space="preserve"><polyline fill="none" stroke="#02B4B6" stroke-width="8.5" stroke-miterlimit="10" points="652 174.3 420.5 254 189 174.3 "/></svg>
+          </a>
         </div>
       </section>
 
+      <section id="easycharge">
+        <div class="container">
+          <div class="col-md-12">
+            <div class="text-center">
+              <h1>¿Qué es EasyCharge?</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur consequatur, atque sunt repellendus cumque sint dolore eum cupiditate sequi necessitatibus numquam iure molestiae doloremque perspiciatis dolor assumenda voluptates. Veritatis a aut placeat, rem odit, labore architecto fugit, ducimus perferendis excepturi repellat, modi enim? Accusamus aut soluta fugiat cupiditate dicta quia molestiae ea, assumenda expedita impedit qui explicabo at exercitationem eaque. Suscipit voluptatibus at quidem sint beatae, rerum molestiae saepe aliquam, officiis cum doloremque illo illum vero modi quod porro nulla laborum et! Nobis non magnam culpa vel quisquam ex, alias eos sed cupiditate. Officia aliquid aut cupiditate, repudiandae eum obcaecati.</p>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <section id="cargador">
         <div class="container">
-          
+          <div class="col-md-12">
+            <div class="flex_container_description">
+
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/tech/phones_x8.svg" alt="">
+                  <figcaption>
+                    <h2>8 Dispositivos</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, sit consequuntur fugiat repellendus enim, quae in laboriosam blanditiis fuga veniam.</p>
+                  </figcaption>
+                </figure>
+              </div>
+
+              <div class="flex_item">
+                <figure class="tech_item" id="batery">
+                  <img src="img/icon/tech/battery.svg" alt="">
+                  <figcaption>
+                    <h2>Bateria</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, sit consequuntur fugiat repellendus enim, quae in laboriosam blanditiis fuga veniam.</p>
+                  </figcaption>
+                </figure>
+              </div>
+
+              <div class="flex_item">
+                <figure class="tech_item" id="size">
+                  <img src="img/icon/tech/size.svg" alt="">
+                  <figcaption>
+                    <h2>Tamaño</h2>
+                    <p></p>
+                  </figcaption>
+                </figure>
+              </div>
+
+              <div class="flex_item">
+                <figure class="tech_item" id="player">
+                  <img src="img/icon/tech/player.svg" alt="">
+                  <figcaption>
+                    <h2>Reproductor de vídeo e imágenes</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, sit consequuntur fugiat repellendus enim, quae in laboriosam blanditiis fuga veniam.</p>
+                  </figcaption>
+                </figure>
+              </div>
+
+              <div class="flex_item">
+                <figure class="tech_item" id="screen">
+                  <img src="img/icon/tech/screen.svg" alt="">
+                  <figcaption>
+                    <h2>Pantalla</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, sit consequuntur fugiat repellendus enim, quae in laboriosam blanditiis fuga veniam.</p>
+                  </figcaption>
+                </figure>
+              </div>
+
+              <div class="flex_item">
+                <figure class="tech_item" id="sensor">
+                  <img src="img/icon/tech/sensor.svg" alt="">
+                  <figcaption>
+                    <h2>Sensor</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, sit consequuntur fugiat repellendus enim, quae in laboriosam blanditiis fuga veniam.</p>
+                  </figcaption>
+                </figure>
+              </div>
+
+            </div>
+          </div>
         </div>
       </section>
+
+      <section>
+        <div class="slider separator_bottom separator_top ">
+          <div class="gradiant">
+            <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
+          </div>
+          <div class="flex_center">
+            <div class="flex_item">
+              <div class="text_center_slider ">
+                <div class="img">
+                  <img src="img/iphone_charging.png" class="img-responsive" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section id="mapa">
         <div class="container">
           
