--- a/index.html
+++ b/index.html
@@ -157,6 +157,16 @@
                 <div class="img">
                   <img src="img/iphone_charging.png" class="img-responsive" alt="">
                 </div>
+                <div class="txt">                  
+                  <h1>
+                    Busca nuestros puntos
+                    <br>
+                    Easy charge
+                  </h1>
+                  <div class="cont_btn">
+                    <a href="#" class="btn">BUSCAR</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
