--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
         <nav id="menu">
           <ul>
             <li class="logo"><a href="#inicio"><img src="img/logo-battery-white.svg" alt=""></a></li>
-            <li><a href="#inicio">inicio</a></li>
-            <li><a href="#cargador">Easy charge</a></li>
-            <li><a href="#mapa">encuentranos</a></li>
-            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="#cargador">¿Quienes somos?</a></li>
+            <li><a href="">Alianza</a></li>
+            <li><a href="">Anunciate</a></li>
+            <li><a href="#mapa">Encontranos</a></li>
+            <li><a href="#contacto">Contactanos</a></li>
           </ul>
         </nav>
       </header>
@@ -37,7 +38,6 @@
         </div>
       </div>
 
-
       <section id="inicio">
         <div class="slider separator_bottom gradiant">
           <div class="flex_center">
@@ -49,7 +49,7 @@
                     No te preocupes, Quedarte sin baterías es cosa del pasado
                   </h1>
                   <div class="cont_btn">
-                    <a href="#" class="btn">Hacete socio</a>
+                    <a href="#" class="btn">Contáctanos</a>
                   </div>
                 </div>
                 <div class="img">
@@ -67,10 +67,24 @@
 
       <section id="easycharge">
         <div class="container">
-          <div class="col-md-12">
-            <div class="text-center">
-              <h1>¿Qué es EasyCharge?</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur consequatur, atque sunt repellendus cumque sint dolore eum cupiditate sequi necessitatibus numquam iure molestiae doloremque perspiciatis dolor assumenda voluptates. Veritatis a aut placeat, rem odit, labore architecto fugit, ducimus perferendis excepturi repellat, modi enim? Accusamus aut soluta fugiat cupiditate dicta quia molestiae ea, assumenda expedita impedit qui explicabo at exercitationem eaque. Suscipit voluptatibus at quidem sint beatae, rerum molestiae saepe aliquam, officiis cum doloremque illo illum vero modi quod porro nulla laborum et! Nobis non magnam culpa vel quisquam ex, alias eos sed cupiditate. Officia aliquid aut cupiditate, repudiandae eum obcaecati.</p>
+          <div class="flex_content_doble easycharge">
+            <div class="right">
+              <div class="logo_circulo">
+                <img src="img/logo-full.svg" alt="">
+              </div>
+            </div>
+            <div class="left">
+              <h2>¿Qué es EasyCharge?</h2>
+              <p>Easy Charge es un producto moderno de alta gama, percibido como un gadget para smartphones y muy útil para personas que no se desconectan del mundo tecnológico.</p>
+            </div>
+          </div>
+          <div class="flex_content_doble publicidad">
+            <div class="right">
+              <h2>¿Que ofrecemos?</h2>
+              <p>Easy Charge es un producto moderno de alta gama, percibido como un gadget para smartphones y muy útil para personas que no se desconectan del mundo tecnológico.</p>
+            </div>
+            <div class="left">
+              <img src="img/icon/publicity.svg" alt="">
             </div>
           </div>
         </div>
@@ -79,14 +93,16 @@
       <section id="cargador">
         <div class="container">
           <div class="col-md-12">
+            <div class="text-center">
+              <h2>Caracteristicas técnicas</h2>
+            </div>
             <div class="flex_container_description">
-
               <div class="flex_item">
                 <figure class="tech_item" id="eight_gagdet">
                   <img src="img/icon/tech/phones_x8.svg" alt="">
                   <figcaption>
-                    <h2>8 Dispositivos</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, sit consequuntur fugiat repellendus enim, quae in laboriosam blanditiis fuga veniam.</p>
+                    <h2>Hasta 8 dispositivos</h2>
+                    <p>Permite recargar hasta 8 smartphones y dispositivos moviles a la vez.</p>
                   </figcaption>
                 </figure>
               </div>
@@ -96,7 +112,7 @@
                   <img src="img/icon/tech/battery.svg" alt="">
                   <figcaption>
                     <h2>Bateria</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, sit consequuntur fugiat repellendus enim, quae in laboriosam blanditiis fuga veniam.</p>
+                    <p>Bateria interna de 20800 mAh con funcionamiento ininterrumpido de 7 horas.</p>
                   </figcaption>
                 </figure>
               </div>
@@ -105,8 +121,12 @@
                 <figure class="tech_item" id="size">
                   <img src="img/icon/tech/size.svg" alt="">
                   <figcaption>
-                    <h2>Tamaño</h2>
-                    <p></p>
+                    <h2>Dimensiones</h2>
+                    <p>
+                      Altura: 23,7cm <br>
+                      Ancho: 13cm<br>
+                      Profundidad: 11,4cm <br>
+                    </p>
                   </figcaption>
                 </figure>
               </div>
@@ -116,7 +136,7 @@
                   <img src="img/icon/tech/player.svg" alt="">
                   <figcaption>
                     <h2>Reproductor de vídeo e imágenes</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, sit consequuntur fugiat repellendus enim, quae in laboriosam blanditiis fuga veniam.</p>
+                    <p>Reproductor de imágenes (JPG, GIF, BMP y PNG) y vídeo (MP4, WMV, MOV y AVI)</p>
                   </figcaption>
                 </figure>
               </div>
@@ -126,17 +146,7 @@
                   <img src="img/icon/tech/screen.svg" alt="">
                   <figcaption>
                     <h2>Pantalla</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, sit consequuntur fugiat repellendus enim, quae in laboriosam blanditiis fuga veniam.</p>
-                  </figcaption>
-                </figure>
-              </div>
-
-              <div class="flex_item">
-                <figure class="tech_item" id="sensor">
-                  <img src="img/icon/tech/sensor.svg" alt="">
-                  <figcaption>
-                    <h2>Sensor</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, sit consequuntur fugiat repellendus enim, quae in laboriosam blanditiis fuga veniam.</p>
+                    <p>Pantalla de 7' LCD Full Color con resolución 600x1024 pixeles.</p>
                   </figcaption>
                 </figure>
               </div>
@@ -159,13 +169,10 @@
                 </div>
                 <div class="txt">                  
                   <h1>
-                    Busca nuestros puntos
+                    Encuentra nuestros puntos de carga 
                     <br>
-                    Easy charge
+                    EasyCharge
                   </h1>
-                  <div class="cont_btn">
-                    <a href="#" class="btn">BUSCAR</a>
-                  </div>
                 </div>
               </div>
             </div>
@@ -175,13 +182,52 @@
 
       <section id="mapa">
         <div class="container">
-          
+          <div class="col-md-12">
+            <div class="cont_map">
+              <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13085.099296879598!2d-56.16772330784963!3d-34.92464388604025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f819e0be26dff%3A0x5721a12a2943bc00!2sPunta+Carretas%2C+Montevideo!5e0!3m2!1ses-419!2suy!4v1495585762275" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
-      <section id="contacto">
+
+      <section id="contacto" class="gradiant">
         <footer>
           <div class="container">
-            
+            <div class="flex_formulario">
+              <div class="right">
+                <form action="#">
+                  <div class="form-group">
+                    <label for="name">Nombre</label>
+                    <input type="text" class="form-control" id="name" placeholder="Nombre">
+                  </div>
+                  <div class="form-group">
+                    <label for="phone">Teléfono</label>
+                    <input type="text" class="form-control" id="phone" placeholder="Teléfono">
+                  </div>
+                  <div class="form-group">
+                    <label for="mail">Email</label>
+                    <input type="text" class="form-control" id="mail" placeholder="Email">
+                  </div>
+                  <div class="form-group">
+                    <label for="comment">Comentarios</label>
+                    <textarea class="form-control" id="comment" rows="3"></textarea>
+                  </div>
+                  <button type="submit" class="btn">Enviar</button>
+                </form>
+              </div>
+              <div class="left">
+                <ul>
+                  <li>direccion</li>
+                  <li>telf</li>
+                </ul>
+                <ul>
+                  <li>direccion</li>
+                  <li>telf</li>
+                </ul>
+              </div>
+            </div>
           </div>
         </footer>
       </section>
