agregado y cambios de nuevo contenido para alianza y anunciate

--- a/alianza.html
+++ b/alianza.html
@@ -47,12 +47,9 @@
               <div class="text_center_slider ">
                 <div class="txt">                  
                   <h1>
-                    <span>Somos EasyCharge</span>
-                    No te preocupes, Quedarte sin baterías es cosa del pasado
+                    <span>Alianza</span>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae error nulla recusandae placeat illo voluptas perspiciatis magnam natus, doloremque, veniam.
                   </h1>
-                  <div class="cont_btn">
-                    <a href="#" class="btn">Contáctanos</a>
-                  </div>
                 </div>
                 <div class="img">
                   <img src="img/product.png" class="img-responsive" alt="">
@@ -61,9 +58,6 @@
             </div>
           </div>
           <img src="img/slider/slide_1.jpg" alt="" class="img-responsive img_slider">
-          <a href="#" class="arrow_down">
-            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="465.7" height="88.2" viewBox="187.6 170.3 465.7 88.2" enable-background="new 187.638 170.269 465.706 88.202" xml:space="preserve"><polyline fill="none" stroke="#02B4B6" stroke-width="8.5" stroke-miterlimit="10" points="652 174.3 420.5 254 189 174.3 "/></svg>
-          </a>
         </div>
       </section>
 
@@ -92,63 +86,33 @@
         </div>
       </section>
 
+
+
+
       <section id="cargador">
         <div class="container">
           <div class="col-md-12">
             <div class="text-center">
-              <h2>Caracteristicas técnicas</h2>
+              <h2>Alianzas</h2>
             </div>
             <div class="flex_container_description">
+
               <div class="flex_item">
                 <figure class="tech_item" id="eight_gagdet">
                   <img src="img/icon/tech/phones_x8.svg" alt="">
                   <figcaption>
-                    <h2>Hasta 8 dispositivos</h2>
-                    <p>Permite recargar hasta 8 smartphones y dispositivos moviles a la vez.</p>
+                    <h2>Temaki</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, dolorum?</p>
                   </figcaption>
                 </figure>
               </div>
 
               <div class="flex_item">
-                <figure class="tech_item" id="batery">
-                  <img src="img/icon/tech/battery.svg" alt="">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/tech/phones_x8.svg" alt="">
                   <figcaption>
-                    <h2>Bateria</h2>
-                    <p>Bateria interna de 20800 mAh con funcionamiento ininterrumpido de 7 horas.</p>
-                  </figcaption>
-                </figure>
-              </div>
-
-              <div class="flex_item">
-                <figure class="tech_item" id="size">
-                  <img src="img/icon/tech/size.svg" alt="">
-                  <figcaption>
-                    <h2>Dimensiones</h2>
-                    <p>
-                      Altura: 23,7cm <br>
-                      Ancho: 13cm<br>
-                      Profundidad: 11,4cm <br>
-                    </p>
-                  </figcaption>
-                </figure>
-              </div>
-
-              <div class="flex_item">
-                <figure class="tech_item" id="player">
-                  <img src="img/icon/tech/player.svg" alt="">
-                  <figcaption>
-                    <h2>Reproductor de vídeo e imágenes</h2>
-                    <p>Reproductor de imágenes (JPG, GIF, BMP y PNG) y vídeo (MP4, WMV, MOV y AVI)</p>
-                  </figcaption>
-                </figure>
-              </div>
-
-              <div class="flex_item">
-                <figure class="tech_item" id="screen">
-                  <img src="img/icon/tech/screen.svg" alt="">
-                  <figcaption>
-                    <h2>Pantalla</h2>
-                    <p>Pantalla de 7' LCD Full Color con resolución 600x1024 pixeles.</p>
+                    <h2>Temaki</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, dolorum?</p>
                   </figcaption>
                 </figure>
               </div>
@@ -157,43 +121,6 @@
           </div>
         </div>
       </section>
-
-      <section>
-        <div class="slider separator_bottom separator_top ">
-          <div class="gradiant">
-            <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
-          </div>
-          <div class="flex_center">
-            <div class="flex_item">
-              <div class="text_center_slider ">
-                <div class="img">
-                  <img src="img/iphone_charging.png" class="img-responsive" alt="">
-                </div>
-                <div class="txt">                  
-                  <h1>
-                    Encuentra nuestros puntos de carga 
-                    <br>
-                    EasyCharge
-                  </h1>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="mapa">
-        <div class="container">
-          <div class="col-md-12">
-            <div class="cont_map">
-              <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13085.099296879598!2d-56.16772330784963!3d-34.92464388604025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f819e0be26dff%3A0x5721a12a2943bc00!2sPunta+Carretas%2C+Montevideo!5e0!3m2!1ses-419!2suy!4v1495585762275" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
 
       <footer id="contacto">
         <div class="slider  separator_top ">
