--- a/anunciate.html
+++ b/anunciate.html
@@ -44,13 +44,13 @@
       <section>
         <div class="slider separator_bottom ">
           <div class="gradiant">
-            <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
+            <img src="img/slider/slide_4.jpg" alt="" class="img-responsive img_slider">
           </div>
           <div class="flex_center">
             <div class="flex_item">
               <div class="text_center_slider ">
                 <div class="img">
-                  <img src="img/iphone_charging.png" class="img-responsive" alt="">
+                  <img src="img/product_anunciate.png" class="img-responsive" alt="">
                 </div>
                 <div class="txt">                  
                   <h1>
