--- a/alianza.html
+++ b/alianza.html
@@ -60,7 +60,7 @@
           <img src="img/slider/slide_1.jpg" alt="" class="img-responsive img_slider">
         </div>
       </section>
-
+<!-- 
       <section id="easycharge">
         <div class="container">
           <div class="flex_content_doble easycharge">
@@ -120,7 +120,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <footer id="contacto">
         <div class="slider  separator_top ">
