--- a/anunciate.html
+++ b/anunciate.html
@@ -68,10 +68,9 @@
           <div class="col-md-12">
 
             <div class="flex_container_description">
-
               <div class="flex_item">
                 <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/tech/phones_x8.svg" alt="">
+                  <!-- <img src="img/icon/tech/phones_x8.svg" alt=""> -->
                   <figcaption>
                     <h2>Última tecnologia</h2>
                     <p>EasyCharge es una plataforma Simple y Eficaz.</p>
@@ -81,7 +80,7 @@
 
               <div class="flex_item">
                 <figure class="tech_item" id="batery">
-                  <img src="img/icon/tech/battery.svg" alt="">
+                  <!-- <img src="img/icon/tech/battery.svg" alt=""> -->
                   <figcaption>
                     <h2>Única</h2>
                     <p>Es colocar su Marca en una experencia memorable y divertida.</p>
@@ -91,7 +90,7 @@
 
               <div class="flex_item">
                 <figure class="tech_item" id="size">
-                  <img src="img/icon/tech/size.svg" alt="">
+                  <!-- <img src="img/icon/tech/size.svg" alt=""> -->
                   <figcaption>
                     <h2>Anunciate</h2>
                     <p>Anuncia en EasyCharge es fácil y rápido.</p>
@@ -100,6 +99,10 @@
               </div>
             </div>
 
+            <p class="quote_text">EasyCharge es un dispositivo moderno y practico donde podés anunciar tú marca.</p>
+            <p class="quote_text">Anunciar en EasyCharge es colocar su marca en una experencia memorable y llamativa para el público.</p>
+            <p class="quote_text">¿Como funciona?, Anunciar en EasyCharge es sencillo y rápido, solo tienes que llenar el formulario y le responderemos a la brevedad. </p>
+<!-- 
             <div class="flex_content_doble">
               <div class="right">
                 <div class="logo_circulo">
@@ -127,7 +130,7 @@
               <div class="left">
                 <p class="quote_text">¿Como funciona?, Anunciar en EasyCharge es sencillo y rápido, solo tienes que llenar el formulario y le responderemos a la brevedad. </p>
               </div>
-            </div>
+            </div> -->
 
           </div>
         </div>
